Fixed JAXB related bugs (mostly in app's dependencies); Also, modified the search hits summary/details panel (bottom-right) and made the app send not too many requests to the server (it does not send hundreds queries in advance anymore...)

--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -1,9 +1,10 @@
 cypath2.description=\
 <html><body><h2>CyPath2 App v.${project.version}</h2><p>\
-<a href='http://purl.org/pc2/current/'>Pathway Commons 2 (PC2)</a>, \
-is a new BioPAX Level 3 warehouse of curated biological pathway and interaction \
-data collected from several major data providers (originally in either BioPAX or \
-PSI-MI format, then - normalized, partially merged, persisted, and indexed), \
-which one can search and traverse over HTTP using the cPath2 web service API.</p>\
-<p>This CyPath2 Cytoscape app is a rich web service GUI client for the PC2 resource \
-(it can be also configured to use an alternative cPath2 instance)</body></html>
+CyPath2 Cytoscape app is a rich Web service GUI client that connects to \
+<a href='http://www.pathwaycommons.org/pc2/'>www.pathwaycommons.org/pc2/</a> \
+- BioPAX Level 3 warehouse of curated biological pathways and interactions, \
+imported from several major data providers' BioPAX and PSI-MI archives by \
+<a href='http://www.pathwaycommons.org'>Pathway Commons</a> project team \
+with <a href='http://code.google.com/p/pathway-commons/source/browse/'>cPath2</a> software \
+(to select, validate, normalize, merge, index, run the Web services, and provide client api).\
+</p></body></html>
