--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<bundle.Name>CyPath2</bundle.Name>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<cytoscape.version>3.0.1</cytoscape.version>
+		<cytoscape.version>3.0.2</cytoscape.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
-		<paxtools.version>4.2.0</paxtools.version>
+		<paxtools.version>4.2.1-SNAPSHOT</paxtools.version>
 		<cpath2.version>4.1.0-SNAPSHOT</cpath2.version>
 		<spring.version>3.2.3.RELEASE</spring.version>
 		<maven-enforcer-plugin>1.2</maven-enforcer-plugin>
@@ -123,6 +123,8 @@
 										<exclude>org.slf4j:1.5*</exclude>
 										<exclude>org.springframework:2.*</exclude>
 										<exclude>org.springframework:3.0.*</exclude>
+										<exclude>javax.xml.bind:*</exclude>
+										<exclude>com.sun.xml.bind:*</exclude>
 									</excludes>
 								</bannedDependencies>
 								<requireMavenVersion>
@@ -237,12 +239,12 @@
 			<dependency>
 				<groupId>org.ops4j.pax.logging</groupId>
 				<artifactId>pax-logging-api</artifactId>
-				<version>1.5.2</version>
+				<version>[1.5.2,2.0.0)</version>
 			</dependency>
 			<dependency>
 				<groupId>cytoscape-temp</groupId>
 				<artifactId>woodstox-core-lgpl</artifactId>
-				<version>4.0.5</version>
+				<version>[4.0.5, 5.0.0)</version>
 			</dependency>
 			<dependency>
 				<groupId>org.osgi</groupId>
@@ -284,7 +286,17 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
-			</dependency>																	
+			</dependency>
+<!-- 			<dependency> -->
+<!--     			<groupId>com.sun.xml.bind</groupId> -->
+<!--     			<artifactId>jaxb-impl</artifactId> -->
+<!--     			<version>2.2.7</version> -->
+<!-- 			</dependency> -->
+<!-- 			<dependency> -->
+<!--     			<groupId>javax.xml.bind</groupId> -->
+<!--     			<artifactId>jaxb-api</artifactId> -->
+<!--     			<version>2.2.7</version> -->
+<!-- 			</dependency>																		 -->
 		</dependencies>
 	</dependencyManagement>
 
@@ -361,16 +373,10 @@
 			<groupId>org.biopax.paxtools</groupId>
 			<artifactId>paxtools-core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>log4j-over-slf4j</artifactId>
-			<scope>runtime</scope>
-		</dependency>		
+<!-- 		<dependency> -->
+<!--     		<groupId>com.sun.xml.bind</groupId> -->
+<!--     		<artifactId>jaxb-impl</artifactId> -->
+<!-- 		</dependency>	 -->
 	</dependencies>
 
 </project>
