(in the middle of) re-factoring due to the BioPAX plugin changes...

--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -3,8 +3,8 @@ cypath2.description=\
 CyPath2 Cytoscape app is a rich Web service GUI client that connects to \
 <a href='http://www.pathwaycommons.org/pc2/'>www.pathwaycommons.org/pc2/</a> \
 - BioPAX Level 3 warehouse of curated biological pathways and interactions, \
-imported from several major data providers' BioPAX and PSI-MI archives by \
-<a href='http://www.pathwaycommons.org'>Pathway Commons</a> project team \
+imported from several major pathway data providers' BioPAX and PSI-MI archives by \
+<a href='http://www.pathwaycommons.org'>Pathway Commons</a> (PC) team \
 with <a href='http://code.google.com/p/pathway-commons/source/browse/'>cPath2</a> software \
 (to select, validate, normalize, merge, index, run the Web services, and provide client api).\
 </p></body></html>
