--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,12 @@
 	
 	<groupId>org.pathwaycommons</groupId>
 	<artifactId>cypath2-impl</artifactId>
-	<version>0.4.2-SNAPSHOT</version>
+	<version>0.5.0-SNAPSHOT</version>
 	
 	<name>${bundle.Name}</name>
 	<description>CyPath2 is a Cytoscape 3 GUI client app 
-	that connects to a cPath2 (cPathSquared) web service (default URL is http://www.pathwaycommons.org/pc2/,
-	a new BioPAX Level3 based server software developed by Pathway Commons team) 
+	that connects to a cPath2 web service (default URL is http://www.pathwaycommons.org/pc2/,
+	a new BioPAX Level3 based server software developed by the Pathway Commons team) 
 	to find and visualize biological pathway networks.</description>
 
 	<organization>
@@ -65,8 +65,8 @@
 					<archive>
 						<manifestEntries>
 							<Cytoscape-App-Name>CyPath2</Cytoscape-App-Name>
-							<Cytoscape-App-Version>0.2</Cytoscape-App-Version>
-							<Cytoscape-API-Compatibility>3.0</Cytoscape-API-Compatibility>
+							<Cytoscape-App-Version>0.5</Cytoscape-App-Version>
+							<Cytoscape-API-Compatibility>3.1</Cytoscape-API-Compatibility>
 						</manifestEntries>
 					</archive>					
 				</configuration>
@@ -138,7 +138,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>			
+			</plugin>
 		</plugins>
 	</build>
 
@@ -155,6 +155,14 @@
 			<name>Cytoscape Releases</name>
 			<url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
 		</repository>
+		<repository>
+			<id>pathway-commons</id>
+			<name>Pathway Commons Repository at Google Code</name>
+			<url>http://repo.pathway-commons.googlecode.com/hg/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>		
 		<repository>
 			<id>biopax.releases</id>
 			<name>BioPAX Repository</name>
@@ -287,16 +295,6 @@
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
-<!-- 			<dependency> -->
-<!--     			<groupId>com.sun.xml.bind</groupId> -->
-<!--     			<artifactId>jaxb-impl</artifactId> -->
-<!--     			<version>2.2.7</version> -->
-<!-- 			</dependency> -->
-<!-- 			<dependency> -->
-<!--     			<groupId>javax.xml.bind</groupId> -->
-<!--     			<artifactId>jaxb-api</artifactId> -->
-<!--     			<version>2.2.7</version> -->
-<!-- 			</dependency>																		 -->
 		</dependencies>
 	</dependencyManagement>
 
@@ -373,10 +371,6 @@
 			<groupId>org.biopax.paxtools</groupId>
 			<artifactId>paxtools-core</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!--     		<groupId>com.sun.xml.bind</groupId> -->
-<!--     		<artifactId>jaxb-impl</artifactId> -->
-<!-- 		</dependency>	 -->
 	</dependencies>
 
 </project>
