--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -1,10 +1,11 @@
 cypath2.description=\
-<html><body><h2>CyPath2 App v.${project.version}</h2><p>\
-CyPath2 Cytoscape app is a rich Web service GUI client that connects to \
-<a href='http://www.pathwaycommons.org/pc2/'>www.pathwaycommons.org/pc2/</a> \
-- BioPAX Level 3 warehouse of curated biological pathways and interactions, \
-imported from several major pathway data providers' BioPAX and PSI-MI archives by \
-<a href='http://www.pathwaycommons.org'>Pathway Commons</a> (PC) team \
-with <a href='http://code.google.com/p/pathway-commons/source/browse/'>cPath2</a> software \
-(to select, validate, normalize, merge, index, run the Web services, and provide client api).\
+<html><body><h2>CyPathwayCommons app v.${project.version}</h2><p>\
+This Cytoscape application provides access from within Cytoscape to the \
+<a href='http://www.pathwaycommons.org'>Pathway Commons (PC)</a> \
+library of biological pathways and interactions. \
+Data is collected from several major pathway data providers \
+based on their BioPAX and PSI-MI formatted export files. \
+The PC team selects, validates, normalizes, merges, indexes \
+the data and runs a <a href='www.pathwaycommons.org/pc2/'>web service, \
+powered by the cPath2 software, to which this app connects. \
 </p></body></html>
