--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<bundle.Name>CyPath2</bundle.Name>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<cytoscape.version>3.1.0-SNAPSHOT</cytoscape.version>
+		<cytoscape.version>3.1.0</cytoscape.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
 		<paxtools.version>4.3.0-SNAPSHOT</paxtools.version>
 		<cpath2.version>4.1.0-SNAPSHOT</cpath2.version>
-		<spring.version>3.2.3.RELEASE</spring.version>
+		<spring.version>3.2.8.RELEASE</spring.version>
 		<maven-enforcer-plugin>1.2</maven-enforcer-plugin>
 		<slf4j.version>1.7.5</slf4j.version>
 		<java.version>1.6</java.version>
@@ -22,13 +22,18 @@
 	
 	<groupId>org.pathwaycommons</groupId>
 	<artifactId>cypath2-impl</artifactId>
-	<version>0.6.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	
 	<name>${bundle.Name}</name>
-	<description>CyPath2 is a Cytoscape 3 GUI client app 
-	that connects to a cPath2 web service (default URL is http://www.pathwaycommons.org/pc2/,
-	a new BioPAX Level3 based server software developed by the Pathway Commons team) 
-	to find and visualize biological pathway networks.</description>
+	<description>
+	CyPathwayCommons provides access from within Cytoscape 3 to the 
+	Pathway Commons (PC) library of biological pathways and 
+	interactions, collected from several major pathway data providers 
+	based on their BioPAX and PSI-MI formatted export files. 
+	The PC team selects, validates, normalizes, merges, indexes 
+	the data and runs a web service (www.pathwaycommons.org/pc2/), 
+	powered by the cPath2 software, to which this app connects.
+	</description>
 
 	<organization>
 		<name>Pathway Commons: G.Bader Lab, University of Toronto; and CBIO, MSKCC</name>
