--- a/pom.xml
+++ b/pom.xml
@@ -11,20 +11,20 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cytoscape.version>3.1.0</cytoscape.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
-		<paxtools.version>4.3.0-SNAPSHOT</paxtools.version>
-		<cpath2.version>4.1.0-SNAPSHOT</cpath2.version>
+		<paxtools.version>4.3.0</paxtools.version>
+		<cpath2.version>6.0.0-SNAPSHOT</cpath2.version>
 		<spring.version>3.2.8.RELEASE</spring.version>
 		<maven-enforcer-plugin>1.2</maven-enforcer-plugin>
 		<slf4j.version>1.7.5</slf4j.version>
-		<java.version>1.6</java.version>
-		<maven.version.range>[3.0.0,3.1.0)</maven.version.range>							
+		<java.version>1.7</java.version>
+		<maven.version.range>[3.0.0,4.0.0)</maven.version.range>							
 	</properties>
 	
 	<groupId>org.pathwaycommons</groupId>
 	<artifactId>cypath2-impl</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	
-	<name>${bundle.Name}</name>
+	<name>CyPathwayCommons</name>
 	<description>
 	CyPathwayCommons provides access from within Cytoscape 3 to the 
 	Pathway Commons (PC) library of biological pathways and 
@@ -36,8 +36,8 @@
 	</description>
 
 	<organization>
-		<name>Pathway Commons: G.Bader Lab, University of Toronto; and CBIO, MSKCC</name>
-		<url>http://code.google.com/p/pathway-commons/</url>
+		<name>Pathway Commons: Gary Bader Lab (University of Toronto) and CBIO (MSKCC)</name>
+		<url>http://www.pathwaycommons.org</url>
 	</organization>
 
 	<packaging>bundle</packaging>
@@ -79,9 +79,11 @@
 						<Embed-Transitive>true</Embed-Transitive>
 						<Import-Package>*;resolution:=optional</Import-Package>
 <!-- does not work as biopax-impl is not in the Apps Store:
-						<Cytoscape-App-Dependencies>biopax-impl;3.1.0-SNAPSHOT</Cytoscape-App-Dependencies> -->
+						<Cytoscape-App-Dependencies>biopax-impl;3.1.0-SNAPSHOT</Cytoscape-App-Dependencies>
+-->
 <!-- not required for osgi bundle apps:	
-						<Cytoscape-API-Compatibility>3.0</Cytoscape-API-Compatibility> -->						
+						<Cytoscape-API-Compatibility>3.0</Cytoscape-API-Compatibility>
+-->						
 					</instructions>
 				</configuration>
 			</plugin>
