--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -3,9 +3,9 @@ cypath2.description=\
 This Cytoscape application provides access from within Cytoscape to the \
 <a href='http://www.pathwaycommons.org'>Pathway Commons (PC)</a> \
 library of biological pathways and interactions. \
-Data is collected from several major pathway data providers \
+Data are collected from several major pathway data providers \
 based on their BioPAX and PSI-MI formatted export files. \
 The PC team selects, validates, normalizes, merges, indexes \
-the data and runs a <a href='www.pathwaycommons.org/pc2/'>web service, \
-powered by the cPath2 software, to which this app connects. \
+the data and runs a <a href='http://www.pathwaycommons.org/pc2/'>web service, \
+powered by the cPath2 software, to which this Cytoscape app connects. \
 </p></body></html>
