--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	
 	<groupId>org.pathwaycommons</groupId>
 	<artifactId>cypath2</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	
 	<name>CyPathwayCommons</name>
 	<description>
