--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<bundle.Name>CyPath2</bundle.Name>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<cytoscape.version>3.2.1</cytoscape.version>
+		<cytoscape.version>3.3.0</cytoscape.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
 		<paxtools.version>5.0.0-SNAPSHOT</paxtools.version>
 		<cpath2.version>6.1.0-SNAPSHOT</cpath2.version>
@@ -24,7 +24,7 @@
 	
 	<groupId>org.pathwaycommons</groupId>
 	<artifactId>cypath2</artifactId>
-	<version>1.1.0</version>
+	<version>1.2.0-SNAPSHOT</version>
 	
 	<name>CyPathwayCommons</name>
 	<description>
@@ -71,7 +71,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Cytoscape-API-Compatibility>3.1</Cytoscape-API-Compatibility>
+						<Cytoscape-API-Compatibility>3.3.0</Cytoscape-API-Compatibility>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
 						<Bundle-Name>${bundle.Name}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
