--- a/pom.xml
+++ b/pom.xml
@@ -114,11 +114,10 @@
 										<exclude>aspectj:aspectj*</exclude> <!-- org.aspectj is the new one -->
 										<exclude>hsqldb:hsqldb</exclude> <!-- org.hsqldb is the new one -->
 										<exclude>log4j:log4j</exclude>
-										<exclude>org.slf4j:1.5*</exclude>
-										<exclude>org.springframework:2.*</exclude>
-										<exclude>org.springframework:3.0.*</exclude>
-										<exclude>javax.xml.bind:*</exclude>
+										<exclude>org.springframework:*</exclude>
+										<!--<exclude>javax.xml.bind:*</exclude>-->
 										<exclude>com.sun.xml.bind:*</exclude>
+										<exclude>org.apache.commons:com.springsource.org.apache.commons.logging</exclude>
 									</excludes>
 								</bannedDependencies>
 								<requireMavenVersion>
@@ -221,63 +220,21 @@
 				<groupId>pathwaycommons.cpath</groupId>
 				<artifactId>cpath-client</artifactId>
 				<version>${cpath2.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>								
 			</dependency>
 			<dependency>
 				<groupId>org.biopax.paxtools</groupId>
 				<artifactId>paxtools-core</artifactId>
 				<version>${paxtools.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.biopax.paxtools</groupId>
 				<artifactId>normalizer</artifactId>
 				<version>${paxtools.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.biopax.paxtools</groupId>
 				<artifactId>paxtools-trove</artifactId>
 				<version>${paxtools.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>			
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>log4j-over-slf4j</artifactId>
-				<version>${slf4j.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
