--- a/pom.xml
+++ b/pom.xml
@@ -114,8 +114,10 @@
 										<exclude>aspectj:aspectj*</exclude> <!-- org.aspectj is the new one -->
 										<exclude>hsqldb:hsqldb</exclude> <!-- org.hsqldb is the new one -->
 										<exclude>log4j:log4j</exclude>
-										<exclude>org.springframework:*</exclude>
-										<!--<exclude>javax.xml.bind:*</exclude>-->
+										<exclude>org.springframework:2.*</exclude>
+										<exclude>org.springframework:3.*</exclude>
+										<exclude>javax.xml.bind:*</exclude>
+										<exclude>net.sf.saxon:*</exclude>
 										<exclude>com.sun.xml.bind:*</exclude>
 										<exclude>org.apache.commons:com.springsource.org.apache.commons.logging</exclude>
 									</excludes>
@@ -220,6 +222,12 @@
 				<groupId>pathwaycommons.cpath</groupId>
 				<artifactId>cpath-client</artifactId>
 				<version>${cpath2.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.biopax.paxtools</groupId>
